<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layer_card_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="13dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/door_icon"
                android:maxHeight="70dp"
                android:maxWidth="70dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_slic3r" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/slic3rCardTitle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp"
                />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textColor="#555555" />

                <Button
                    android:id="@+id/stlUploadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stlSelectButton"
                    android:paddingBottom="10dp" 
                    android:onClick="selectStlClicked"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>